adding blocks logic

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,30 @@
     </distributionManagement>
 
     <dependencies>
+
+        <!-- Log4J -->
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.36</version>
+        </dependency>
+
+        <!-- Swing -->
         <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
@@ -253,13 +277,11 @@
             <artifactId>jgoodies-animation</artifactId>
             <version>1.4.2</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.swinglabs/swingx -->
         <dependency>
             <groupId>org.swinglabs</groupId>
             <artifactId>swingx</artifactId>
             <version>1.6.1</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.swinglabs/swingx -->
         <dependency>
             <groupId>org.swinglabs.swingx</groupId>
             <artifactId>swingx-all</artifactId>
@@ -302,9 +324,7 @@
             <scope>compile</scope>
         </dependency>
 
-        <!--                    -->
         <!-- Broken/Unreachable -->
-        <!--                    -->
 
         <!--        <dependency>-->
         <!--            <groupId>it.tidalwave.thesefoolishthings</groupId>-->
@@ -316,156 +336,95 @@
         <!--            <artifactId>swingjavabuilder</artifactId>-->
         <!--            <version>0.3</version>-->
         <!--        </dependency>-->
-        <!-- https://mvnrepository.com/artifact/net.sf.cssbox/swingbox -->
         <!--        <dependency>-->
         <!--            <groupId>net.sf.cssbox</groupId>-->
         <!--            <artifactId>swingbox</artifactId>-->
         <!--            <version>1.1</version>-->
         <!--        </dependency>-->
-        <!-- https://mvnrepository.com/artifact/org.buildsomethingawesome.lib/awesome-java-swing -->
-        <!-- https://mvnrepository.com/artifact/net.sf.javagimmicks/gimmicks-swing -->
         <!--        <dependency>-->
         <!--            <groupId>net.sf.javagimmicks</groupId>-->
         <!--            <artifactId>gimmicks-swing</artifactId>-->
         <!--            <version>0.99-alpha1</version>-->
         <!--        </dependency>-->
-
-        <!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-swing -->
-        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.geotools/gt-swing &ndash;&gt;-->
         <!--        <dependency>-->
         <!--            <groupId>org.geotools</groupId>-->
         <!--            <artifactId>gt-swing</artifactId>-->
         <!--            <version>26.2</version>-->
         <!--        </dependency>-->
-        <!-- https://mvnrepository.com/artifact/eu.agrosense.client/util-swing -->
         <!--        <dependency>-->
         <!--            <groupId>eu.agrosense.client</groupId>-->
         <!--            <artifactId>util-swing</artifactId>-->
         <!--            <version>14.06-beta</version>-->
         <!--        </dependency>-->
-        <!-- https://mvnrepository.com/artifact/net.imagej/imagej-ui-swing -->
         <!--        <dependency>-->
         <!--            <groupId>net.imagej</groupId>-->
         <!--            <artifactId>imagej-ui-swing</artifactId>-->
         <!--            <version>0.22.0</version>-->
         <!--        </dependency>-->
-        <!-- https://mvnrepository.com/artifact/org.cytoscape/swing-util -->
         <!--        <dependency>-->
         <!--            <groupId>org.cytoscape</groupId>-->
         <!--            <artifactId>swing-util</artifactId>-->
         <!--            <version>3.0.0-alpha2</version>-->
         <!--        </dependency>-->
-
-        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-swing -->
-
-        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.lds.stack.swing/stack-swing &ndash;&gt;-->
         <!--        <dependency>-->
         <!--            <groupId>org.lds.stack.swing</groupId>-->
         <!--            <artifactId>stack-swing</artifactId>-->
         <!--            <version>1.6.0</version>-->
         <!--        </dependency>-->
-        <!-- https://mvnrepository.com/artifact/org.geotoolkit.pending/geotk-widgets-swing-pending -->
         <!--        <dependency>-->
         <!--            <groupId>org.geotoolkit.pending</groupId>-->
         <!--            <artifactId>geotk-widgets-swing-pending</artifactId>-->
         <!--            <version>4.0-M1</version>-->
         <!--            <scope>provided</scope>-->
-        <!--        </dependency>&lt;!&ndash; https://mvnrepository.com/artifact/net.anwiba.commons/anwiba-commons-swing-icon &ndash;&gt;-->
-
-        <!-- https://mvnrepository.com/artifact/org.tentackle/tentackle-swing -->
-
-        <!-- https://mvnrepository.com/artifact/io.github.vincenzopalazzo/material-ui-swing -->
-
-
-        <!-- https://mvnrepository.com/artifact/com.anrisoftware.prefdialog/prefdialog-misc-swing -->
-        <!-- https://mvnrepository.com/artifact/org.dockingframes/docking-frames-common -->
-        <!--        <dependency>-->
         <!--            <groupId>org.dockingframes</groupId>-->
         <!--            <artifactId>docking-frames-common</artifactId>-->
         <!--            <version>1.1.2p6a</version>-->
         <!--        </dependency>-->
-
-        <!--         https://mvnrepository.com/artifact/org.dockingframes/docking-frames-core -->
         <!--        <dependency>-->
         <!--            <groupId>org.dockingframes</groupId>-->
         <!--            <artifactId>docking-frames-core</artifactId>-->
         <!--            <version>1.1.2p6a</version>-->
         <!--        </dependency>-->
-
-        <!-- https://mvnrepository.com/artifact/tablelayout/TableLayout -->
-
-        <!-- https://mvnrepository.com/artifact/org.jdesktop/swing-layout -->
         <!--        <dependency>-->
         <!--            <groupId>org.jdesktop</groupId>-->
         <!--            <artifactId>swing-layout</artifactId>-->
         <!--            <version>1.0.2</version>-->
         <!--        </dependency>-->
-
-        <!-- https://mvnrepository.com/artifact/org.codehaus.griffon/griffon-swing -->
-
-        <!-- https://mvnrepository.com/artifact/org.pfsw/pf-swing -->
         <!--        <dependency>-->
         <!--            <groupId>org.pfsw</groupId>-->
         <!--            <artifactId>pf-swing</artifactId>-->
         <!--            <version>3.2.0</version>-->
         <!--        </dependency>-->
-
-        <!-- https://mvnrepository.com/artifact/org.microemu/microemu-javase-swing -->
-
-        <!-- https://mvnrepository.com/artifact/de.schlichtherle.truezip/truezip-swing -->
-        <!-- https://mvnrepository.com/artifact/io.github.astrapi69/swing-base-components -->
-        <!-- https://mvnrepository.com/artifact/org.jspresso/jspresso-swing-components -->
         <!--        <dependency>-->
         <!--            <groupId>org.jspresso</groupId>-->
         <!--            <artifactId>jspresso-swing-components</artifactId>-->
         <!--            <version>2.2.1</version>-->
         <!--        </dependency>-->
-        <!--         https://mvnrepository.com/artifact/com.github.rickyclarkson/swingflow -->
-        <!-- https://mvnrepository.com/artifact/it.tidalwave.thesefoolishthings/it-tidalwave-swing-beansbinding -->
         <!--        <dependency>-->
         <!--            <groupId>it.tidalwave.thesefoolishthings</groupId>-->
         <!--            <artifactId>it-tidalwave-swing-beansbinding</artifactId>-->
         <!--            <version>2.6</version>-->
         <!--        </dependency>-->
-
-        <!-- https://mvnrepository.com/artifact/org.swinglabs/jxlayer -->
         <!--        <dependency>-->
         <!--            <groupId>org.swinglabs</groupId>-->
         <!--            <artifactId>jxlayer</artifactId>-->
         <!--            <version>3.0.4</version>-->
         <!--        </dependency>-->
-        <!-- https://mvnrepository.com/artifact/org.geotoolkit/geotk-widgets-swing -->
         <!--        <dependency>-->
         <!--            <groupId>org.geotoolkit</groupId>-->
         <!--            <artifactId>geotk-widgets-swing</artifactId>-->
         <!--            <version>4.0-M3</version>-->
         <!--        </dependency>-->
-        <!-- https://mvnrepository.com/artifact/com.mastfrog/simplevalidation-swing -->
-        <!-- https://mvnrepository.com/artifact/org.codeartisans.thirdparties.swing/org-openide-util -->
-        <!-- https://mvnrepository.com/artifact/org.codeartisans.thirdparties.swing/org-openide-util -->
-
-        <!-- https://mvnrepository.com/artifact/org.swinglabs/swingx-beaninfo -->
         <!--        <dependency>-->
         <!--            <groupId>org.swinglabs</groupId>-->
         <!--            <artifactId>swingx-beaninfo</artifactId>-->
         <!--            <version>1.6.2-2</version>-->
         <!--        </dependency>-->
-        <!-- https://mvnrepository.com/artifact/io.github.astrapi69/swing-base-components -->
-        <!-- https://mvnrepository.com/artifact/org.kordamp.ikonli/ikonli-swing -->
-
-        <!-- https://mvnrepository.com/artifact/com.jgoodies/forms -->
-        <!-- https://mvnrepository.com/artifact/com.jgoodies/jgoodies-common -->
-        <!-- https://mvnrepository.com/artifact/com.jgoodies/looks -->
-
-        <!-- https://mvnrepository.com/artifact/com.jgoodies/jgoodies-binding -->
-
-        <!-- https://mvnrepository.com/artifact/com.jgoodies/jgoodies-validation -->
         <!--        <dependency>-->
         <!--            <groupId>io.github.jonestimd</groupId>-->
         <!--            <artifactId>swing-extensions</artifactId>-->
         <!--            <version>1.4.0</version>-->
         <!--        </dependency>-->
-
 
     </dependencies>
     <repositories>
